@@ -11,6 +11,8 @@ PROGRAMS =
 MODULES =
 MANS =
 
+ALL_RULES =
+
 INSTALL_RULES =
 
 CLEAN_FILES =
