@@ -1,7 +1,7 @@
 #
 # Set TOPDIR to the project toplevel directory
 # 
-TOPDIR = .
+TOPDIR = ../..
 
 #
 # Include this first, right after setting TOPDIR
@@ -12,23 +12,14 @@ include $(TOPDIR)/Preamble.make
 #
 # Add any directories to recurse into via the SUBDIRS variable.
 # 
-SUBDIRS = include libosm kernel tools test
+SUBDIRS = 
 
-#
-# Extra (non-source) files to distribute
-#
-DIST_FILES = \
-	COPYING		\
-	README		\
-	Config.make.in	\
-	Preamble.make	\
-	Postamble.make	\
-	config.guess	\
-	config.sub	\
-	configure	\
-	configure.in	\
-	install-sh	\
-	mkinstalldirs
+HEADERS =		\
+	osmabi.h	\
+	osmdisk.h	\
+	osmkernel.h
+DIST_FILES = $(HEADERS)
+
 
 #
 # Include this at the very end of the Makefile
